WebCore:

2009-06-01  Nate Chapin  <japhet@google.com>

        Reviewed by Dimitri Glazkov.  Landed by Adam Barth.
        
        If a url with an anchor is being loaded, ensure that the anchor remains locked in view until the page
        has finished loading compeltely or the user has manually scrolled.  Refreshing an anchor url after
        scrolling to a new location on the page will still result in jumping to the new location.
        
        https://bugs.webkit.org/show_bug.cgi?id=26034

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::gotoAnchor): Set anchor lock after navigating to anchor.
        (WebCore::FrameLoader::completed): Release anchor lock.
        * page/FrameView.cpp:
        (WebCore::FrameView::FrameView): Ensure anchor lock starts unset.
        (WebCore::FrameView::reset): Ensure anchor lock starts unset.
        (WebCore::FrameView::layout): If anchor lock is set, force a gotoAnchor() after layout.
        (WebCore::FrameView::scrollRectIntoViewRecursively): Release anchor lock if a programmatic scroll begins.
        (WebCore::FrameView::setWasScrolledByUser): Release anchor lock if user manually scrolls.
        (WebCore::FrameView::setScrollPosition): Release anchor lock if a programmatic scroll begins.
        * page/FrameView.h:
        (WebCore::FrameView::lockedToAnchor): Added.
        (WebCore::FrameView::setLockedToAnchor): Added.

LayoutTests:

2009-06-01  Nate Chapin  <japhet@google.com>

        Reviewed by Dimitri Glazkov.  Landed by Adam Barth.

        Ensure an anchor remains locked in view as images (without height already specified) load around it.
        
        https://bugs.webkit.org/show_bug.cgi?id=26034

        * fast/dynamic/anchor-lock.html: Added.
        * fast/dynamic/resources/largeblank.png: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@44311 bbb929c8-8fbe-4397-9dbb-9b2b20218538