third_party/WebKit/WebCore/loader/FrameLoader.cpp
@@ -1631,8 +1631,11 @@ bool FrameLoader::gotoAnchor(const String& name)
         renderer = anchorNode->renderer();
         rect = anchorNode->getRect();
     }
-    if (renderer)
+    if (renderer) {
         renderer->enclosingLayer()->scrollRectToVisible(rect, true, ScrollAlignment::alignToEdgeIfNeeded, ScrollAlignment::alignTopAlways);
+        if (m_frame->view())
+            m_frame->view()->setLockedToAnchor(true);
+    }
 
     return true;
 }
@@ -2130,6 +2133,8 @@ void FrameLoader::completed()
         child->loader()->parentCompleted();
     if (Frame* parent = m_frame->tree()->parent())
         parent->loader()->checkCompleted();
+    if (m_frame->view())
+        m_frame->view()->setLockedToAnchor(false);
 }
 
 void FrameLoader::started()
