third_party/WebKit/WebCore/page/FrameView.h
@@ -189,6 +189,9 @@ public:
 
     void adjustPageHeight(float* newBottom, float oldTop, float oldBottom, float bottomLimit);
 
+    bool lockedToAnchor() { return m_lockedToAnchor; }
+    void setLockedToAnchor(bool lockedToAnchor) { m_lockedToAnchor = lockedToAnchor; }
+
 
 private:
     void reset();
@@ -289,6 +292,8 @@ private:
 
     bool m_isVisuallyNonEmpty;
     bool m_firstVisuallyNonEmptyLayoutCallbackPending;
+
+    bool m_lockedToAnchor;
 };
 
 } // namespace WebCore
